[#330] Refactor cells and tableviews
Add a base table view controller to implement similar logic between screens.

--- a/Scribe/Resources/Localizable.xcstrings
+++ b/Scribe/Resources/Localizable.xcstrings
@@ -118,6 +118,28 @@
           }
         }
       }
+    },
+    "settings.title" : {
+      "comment" : "The title for the settings screen",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Settings"
+          }
+        }
+      }
+    },
+    "settings.title.backButton" : {
+      "comment" : "The back button's title for the settings screen",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Settings"
+          }
+        }
+      }
     }
   },
   "version" : "1.0"
