#441 dark coloration for about + keyboard + conjugation view

--- a/Scribe/Resources/Localizable.xcstrings
+++ b/Scribe/Resources/Localizable.xcstrings
@@ -136,7 +136,7 @@
         "en" : {
           "stringUnit" : {
             "state" : "translated",
-            "value" : "Scribe Settings"
+            "value" : "Settings"
           }
         }
       }
