Changed the header "keyboard installation"
Changed the header in the install menu so it says "keyboard installation", and it is now extracted from the white box.

--- a/Scribe/Resources/Localizable.xcstrings
+++ b/Scribe/Resources/Localizable.xcstrings
@@ -56,8 +56,20 @@
         }
       }
     },
+    "settings.installation.header" : {
+      "comment" : "Scribe keyboard installation header",
+      "extractionState" : "manual",
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Keyboard installation"
+          }
+        }
+      }
+    },
     "settings.installedKeyboards" : {
-      "comment" : "The title of the installed keyboards section",
+      "comment" : "Scribe keyboard installation header",
       "localizations" : {
         "en" : {
           "stringUnit" : {
