Reworked title in the installation screen in accordance with recent changes
This was probably not properly carried over because the file changed its name

--- a/Scribe/Resources/Localizable.xcstrings
+++ b/Scribe/Resources/Localizable.xcstrings
@@ -1232,7 +1232,7 @@
       }
     },
     "install.title" : {
-      "comment" : "Scribe keyboard installation header",
+      "comment" : "The title of the installed keyboards section",
       "localizations" : {
         "de" : {
           "stringUnit" : {
