--- a/Scribe/Resources/Localizable.xcstrings
+++ b/Scribe/Resources/Localizable.xcstrings
@@ -1,23 +1,6 @@
 {
   "sourceLanguage" : "en",
   "strings" : {
-    "about" : {
-      "comment" : "Title for the about tab",
-      "localizations" : {
-        "de" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "Info"
-          }
-        },
-        "en" : {
-          "stringUnit" : {
-            "state" : "translated",
-            "value" : "About"
-          }
-        },
-      }
-    },
     "about.appHints" : {
       "comment" : "Title for the button to reset hints",
       "localizations" : {
@@ -32,7 +15,7 @@
             "state" : "translated",
             "value" : "Reset app hints"
           }
-        },
+        }
       }
     },
     "about.bugReport" : {
@@ -49,7 +32,7 @@
             "state" : "translated",
             "value" : "Report a bug"
           }
-        },
+        }
       }
     },
     "about.community" : {
@@ -66,7 +49,7 @@
             "state" : "translated",
             "value" : "Community"
           }
-        },
+        }
       }
     },
     "about.email" : {
@@ -83,7 +66,7 @@
             "state" : "translated",
             "value" : "Send us an email"
           }
-        },
+        }
       }
     },
     "about.feedback" : {
@@ -100,7 +83,7 @@
             "state" : "translated",
             "value" : "Feedback and support"
           }
-        },
+        }
       }
     },
     "about.github" : {
@@ -117,7 +100,7 @@
             "state" : "translated",
             "value" : "See the code on GitHub"
           }
-        },
+        }
       }
     },
     "about.legal" : {
@@ -134,7 +117,7 @@
             "state" : "translated",
             "value" : "Legal"
           }
-        },
+        }
       }
     },
     "about.matrix" : {
@@ -151,7 +134,7 @@
             "state" : "translated",
             "value" : "Chat with the team on Matrix"
           }
-        },
+        }
       }
     },
     "about.privacyPolicy" : {
@@ -168,7 +151,7 @@
             "state" : "translated",
             "value" : "Privacy policy"
           }
-        },
+        }
       }
     },
     "about.privacyPolicy.body" : {
@@ -185,7 +168,7 @@
             "state" : "translated",
             "value" : "Please note that the English version of this policy takes precedence over all other versions.\n\nThe Scribe developers (SCRIBE) built the iOS application \"Scribe - Language Keyboards\" (SERVICE) as an open-source application. This SERVICE is provided by SCRIBE at no cost and is intended for use as is.\n\nThis privacy policy (POLICY) is used to inform the reader of the policies for the access, tracking, collection, retention, use, and disclosure of personal information (USER INFORMATION) and usage data (USER DATA) for all individuals who make use of this SERVICE (USERS).\n\nUSER INFORMATION is specifically defined as any information related to the USERS themselves or the devices they use to access the SERVICE.\n\nUSER DATA is specifically defined as any text that is typed or actions that are done by the USERS while using the SERVICE.\n\n1. Policy Statement\n\nThis SERVICE does not access, track, collect, retain, use, or disclose any USER INFORMATION or USER DATA.\n\n2. Do Not Track\n\nUSERS contacting SCRIBE to ask that their USER INFORMATION and USER DATA not be tracked will be provided with a copy of this POLICY as well as a link to all source codes as proof that they are not being tracked.\n\n3. Third-Party Data\n\nThis SERVICE makes use of third-party data. All data used in the creation of this SERVICE comes from sources that allow its full use in the manner done so by the SERVICE. Specifically, the data for this SERVICE comes from Wikidata, Wikipedia and Unicode. Wikidata states that, \"All structured data in the main, property and lexeme namespaces is made available under the Creative Commons CC0 License; text in other namespaces is made available under the Creative Commons Attribution-Share Alike License.\" The policy detailing Wikidata data usage can be found at https://www.wikidata.org/wiki/Wikidata:Licensing. Wikipedia states that text data, the type of data used by the SERVICE, \"... can be used under the terms of the Creative Commons Attribution Share-Alike license\". The policy detailing Wikipedia data usage can be found at https://en.wikipedia.org/wiki/Wikipedia:Reusing_Wikipedia_content. Unicode provides permission, \"... free of charge, to any person obtaining a copy of the Unicode data files and any associated documentation (the \"Data Files\") or Unicode software and any associated documentation (the \"Software\") to deal in the Data Files or Software without restriction...\" The policy detailing Unicode data usage can be found at https://www.unicode.org/license.txt.\n\n4. Third-Party Source Code\n\nThis SERVICE was based on third-party code. All source code used in the creation of this SERVICE comes from sources that allow its full use in the manner done so by the SERVICE. Specifically, the basis of this project was the project CustomKeyboard by Ethan Sarif-Kattan. CustomKeyboard was released under an MIT license, with this license being available at https://github.com/EthanSK/CustomKeyboard/blob/master/LICENSE.\n\n5. Third-Party Services\n\nThis SERVICE makes use of third-party services to manipulate some of the third-party data. Specifically, data has been translated using models from Hugging Face transformers. This service is covered by an Apache License 2.0, which states that it is available for commercial use, modification, distribution, patent use, and private use. The license for the aforementioned service can be found at https://github.com/huggingface/transformers/blob/master/LICENSE.\n\n6. Third-Party Links\n\nThis SERVICE contains links to external websites. If USERS click on a third-party link, they will be directed to a website. Note that these external websites are not operated by this SERVICE. Therefore, USERS are strongly advised to review the privacy policy of these websites. This SERVICE has no control over and assumes no responsibility for the content, privacy policies, or practices of any third-party sites or services.\n\n7. Third-Party Images\n\nThis SERVICE contains images that are copyrighted by third-parties. Specifically, this app includes a copy of the logos of GitHub, Inc and Wikidata, trademarked by Wikimedia Foundation, Inc. The terms by which the GitHub logo can be used are found on https://github.com/logos, and the terms for the Wikidata logo are found on the following Wikimedia page: https://foundation.wikimedia.org/wiki/Policy:Trademark_policy. This SERVICE uses the copyrighted images in a way that matches these criteria, with the only deviation being a rotation of the GitHub logo that is common in the open-source community to indicate that there is a link to the GitHub website.\n\n8. Content Notice\n\nThis SERVICE allows USERS to access linguistic content (CONTENT). Some of this CONTENT could be deemed inappropriate for children and legal minors. Accessing CONTENT using the SERVICE is done in a way that the information is unavailable unless explicitly known. Specifically, USERS \"can\" translate words, conjugate verbs, and access other grammatical features of CONTENT that may be sexual, violent, or otherwise inappropriate in nature. USERS \"cannot\" translate words, conjugate verbs, and access other grammatical features of CONTENT that may be sexual, violent, or otherwise inappropriate in nature if they do not already know about the nature of this CONTENT. SCRIBE takes no responsibility for the access of such CONTENT.\n\n9. Changes\n\nThis POLICY is subject to change. Updates to this POLICY will replace all prior instances, and if deemed material will further be clearly stated in the next applicable update to the SERVICE. SCRIBE encourages USERS to periodically review this POLICY for the latest information on our privacy practices and to familiarize themselves with any changes.\n\n10. Contact\n\nIf you have any questions, concerns, or suggestions about this POLICY, do not hesitate to visit https://github.com/scribe-org or contact SCRIBE at scribe.langauge@gmail.com. The person responsible for such inquiries is Andrew Tavis McAllister.\n\n11. Effective Date\n\nThis POLICY is effective as of the 24th of May, 2022."
           }
-        },
+        }
       }
     },
     "about.privacyPolicy.caption" : {
@@ -202,7 +185,7 @@
             "state" : "translated",
             "value" : "Keeping you safe"
           }
-        },
+        }
       }
     },
     "about.rate" : {
@@ -219,7 +202,7 @@
             "state" : "translated",
             "value" : "Rate Scribe"
           }
-        },
+        }
       }
     },
     "about.scribe" : {
@@ -236,7 +219,7 @@
             "state" : "translated",
             "value" : "View all Scribe apps"
           }
-        },
+        }
       }
     },
     "about.share" : {
@@ -253,7 +236,7 @@
             "state" : "translated",
             "value" : "Share Scribe"
           }
-        },
+        }
       }
     },
     "about.thirdParty" : {
@@ -270,7 +253,7 @@
             "state" : "translated",
             "value" : "Third-party licenses"
           }
-        },
+        }
       }
     },
     "about.thirdParty.author" : {
@@ -287,7 +270,7 @@
             "state" : "translated",
             "value" : "Author"
           }
-        },
+        }
       }
     },
     "about.thirdParty.body" : {
@@ -304,7 +287,7 @@
             "state" : "translated",
             "value" : "The Scribe developers (SCRIBE) built\nthe iOS application \"Scribe - Language Keyboards\" (SERVICE) using third party code. All source code used in the creation of this SERVICE comes from sources that allow its full use in the manner done so by the SERVICE. This section lists the source code on which the SERVICE was based as well as the coinciding licenses of each.\n\nThe following is a list of all used source code, the main author or authors of the code, the license under which it was released at time of usage, and a link to the license.\n\n1. Custom Keyboard\n• Author: EthanSK\n• License: MIT\n• Link: https://github.com/EthanSK/CustomKeyboard/blob/master/LICENSE"
           }
-        },
+        }
       }
     },
     "about.thirdParty.caption" : {
@@ -321,7 +304,7 @@
             "state" : "translated",
             "value" : "Whose code we used"
           }
-        },
+        }
       }
     },
     "about.thirdParty.license" : {
@@ -338,7 +321,7 @@
             "state" : "translated",
             "value" : "License"
           }
-        },
+        }
       }
     },
     "about.thirdParty.link" : {
@@ -355,7 +338,7 @@
             "state" : "translated",
             "value" : "Link"
           }
-        },
+        }
       }
     },
     "about.title" : {
@@ -372,7 +355,7 @@
             "state" : "translated",
             "value" : "About"
           }
-        },
+        }
       }
     },
     "about.wikimedia" : {
@@ -389,7 +372,7 @@
             "state" : "translated",
             "value" : "Wikimedia and Scribe"
           }
-        },
+        }
       }
     },
     "about.wikimedia.caption" : {
@@ -406,7 +389,7 @@
             "state" : "translated",
             "value" : "How we work together"
           }
-        },
+        }
       }
     },
     "about.wikimedia.text1" : {
@@ -423,7 +406,7 @@
             "state" : "translated",
             "value" : "Scribe would not be possible without countless contributions by Wikimedia contributors to the many projects that they support. Specifically Scribe makes use of data from the Wikidata Lexicographical data community, as well as data from Wikipedia for each language that Scribe supports."
           }
-        },
+        }
       }
     },
     "about.wikimedia.text2" : {
@@ -440,7 +423,7 @@
             "state" : "translated",
             "value" : "Wikidata is a collaboratively edited multilingual knowledge graph hosted by the Wikimedia Foundation. It provides freely available data that anyone can use under a Creative Commons Public Domain license (CC0).  Scribe uses language data from Wikidata to provide users with verb conjugations, noun-form annotations, noun plurals, and many other features."
           }
-        },
+        }
       }
     },
     "about.wikimedia.text3" : {
@@ -457,7 +440,7 @@
             "state" : "translated",
             "value" : "Wikipedia is a multilingual free online encyclopedia written and maintained by a community of volunteers through open collaboration and a wiki-based editing system. Scribe uses data from Wikipedia to produce autosuggestions by deriving the most common words in a language as well as the most common words that follow them."
           }
-        },
+        }
       }
     },
     "french" : {
@@ -474,7 +457,7 @@
             "state" : "translated",
             "value" : "French"
           }
-        },
+        }
       }
     },
     "german" : {
@@ -491,11 +474,12 @@
             "state" : "translated",
             "value" : "German"
           }
-        },
+        }
       }
     },
     "install" : {
       "comment" : "Title for the installation tab",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -508,7 +492,7 @@
             "state" : "translated",
             "value" : "Installation"
           }
-        },
+        }
       }
     },
     "install.settingsLink" : {
@@ -525,7 +509,7 @@
             "state" : "translated",
             "value" : "Open Scribe settings"
           }
-        },
+        }
       }
     },
     "install.text" : {
@@ -542,7 +526,7 @@
             "state" : "translated",
             "value" : "Select"
           }
-        },
+        }
       }
     },
     "install.text2" : {
@@ -559,7 +543,7 @@
             "state" : "translated",
             "value" : "Activate keyboards that you want to use\n\n4. When typing press"
           }
-        },
+        }
       }
     },
     "install.text3" : {
@@ -576,7 +560,7 @@
             "state" : "translated",
             "value" : "to select keyboards"
           }
-        },
+        }
       }
     },
     "install.title" : {
@@ -593,7 +577,7 @@
             "state" : "translated",
             "value" : "Keyboard installation"
           }
-        },
+        }
       }
     },
     "italian" : {
@@ -610,7 +594,7 @@
             "state" : "translated",
             "value" : "Italian"
           }
-        },
+        }
       }
     },
     "keyboards" : {
@@ -627,7 +611,7 @@
             "state" : "translated",
             "value" : "Keyboards"
           }
-        },
+        }
       }
     },
     "portuguese" : {
@@ -644,7 +628,7 @@
             "state" : "translated",
             "value" : "Portuguese"
           }
-        },
+        }
       }
     },
     "russian" : {
@@ -661,7 +645,7 @@
             "state" : "translated",
             "value" : "Russian"
           }
-        },
+        }
       }
     },
     "settings.appSettings" : {
@@ -678,7 +662,7 @@
             "state" : "translated",
             "value" : "App settings"
           }
-        },
+        }
       }
     },
     "settings.appSettings.appLanguage" : {
@@ -695,7 +679,7 @@
             "state" : "translated",
             "value" : "App language"
           }
-        },
+        }
       }
     },
     "settings.functionality" : {
@@ -712,7 +696,7 @@
             "state" : "translated",
             "value" : "Functionality"
           }
-        },
+        }
       }
     },
     "settings.functionality.autoSuggestEmoji" : {
@@ -729,7 +713,7 @@
             "state" : "translated",
             "value" : "Autosuggest emojis"
           }
-        },
+        }
       }
     },
     "settings.installedKeyboards" : {
@@ -746,7 +730,7 @@
             "state" : "translated",
             "value" : "Select installed keyboard"
           }
-        },
+        }
       }
     },
     "settings.layout" : {
@@ -763,7 +747,7 @@
             "state" : "translated",
             "value" : "Layout"
           }
-        },
+        }
       }
     },
     "settings.layout.autoSuggestEmoji.description" : {
@@ -780,7 +764,7 @@
             "state" : "translated",
             "value" : "Turn on emoji suggestions and completions for more expressive typing."
           }
-        },
+        }
       }
     },
     "settings.layout.disableAccentCharacters" : {
@@ -797,7 +781,7 @@
             "state" : "translated",
             "value" : "Disable accent characters"
           }
-        },
+        }
       }
     },
     "settings.layout.disableAccentCharacters.description" : {
@@ -814,7 +798,7 @@
             "state" : "translated",
             "value" : "Include accented letter keys on the primary keyboard layout."
           }
-        },
+        }
       }
     },
     "settings.layout.periodAndComma" : {
@@ -831,7 +815,7 @@
             "state" : "translated",
             "value" : "Period and comma on ABC"
           }
-        },
+        }
       }
     },
     "settings.layout.periodAndComma.description" : {
@@ -848,7 +832,7 @@
             "state" : "translated",
             "value" : "Include comma and period keys on the main keyboard for convenient typing."
           }
-        },
+        }
       }
     },
     "settings.title" : {
@@ -865,7 +849,7 @@
             "state" : "translated",
             "value" : "Settings"
           }
-        },
+        }
       }
     },
     "spanish" : {
@@ -882,7 +866,7 @@
             "state" : "translated",
             "value" : "Spanish"
           }
-        },
+        }
       }
     },
     "swedish" : {
@@ -899,7 +883,7 @@
             "state" : "translated",
             "value" : "Swedish"
           }
-        },
+        }
       }
     },
     "wikidataExplanation1" : {
@@ -916,7 +900,7 @@
             "state" : "translated",
             "value" : "Wikidata is a collaboratively edited knowledge graph that's maintained by the Wikimedia Foundation. It serves as a source of open data for projects like Wikipedia and countless others."
           }
-        },
+        }
       }
     },
     "wikidataExplanation2" : {
@@ -933,7 +917,7 @@
             "state" : "translated",
             "value" : "Scribe uses Wikidata's language data for many of its core features. We get information like noun genders, verb conjugations and much more!"
           }
-        },
+        }
       }
     },
     "wikidataExplanation3" : {
@@ -950,7 +934,7 @@
             "state" : "translated",
             "value" : "You can make an account at wikidata.org to join the community that's supporting Scribe and so many other projects. Help us bring free information to the world!"
           }
-        },
+        }
       }
     }
   },
