Changes according to new Scribe-i18n changes
- Added default values in English to every piece of text
- Changed location for localizations to i18n subtree

--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -335,6 +335,7 @@
     },
     "install" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -426,6 +427,9 @@
           }
         }
       }
+    },
+    "OK" : {
+
     },
     "portuguese" : {
       "comment" : "",
@@ -527,7 +531,7 @@
       }
     },
     "settings.layout.disableAccentCharacters" : {
-      "comment" : "",
+      "comment" : "Toggles accented characters for the selected keyboard",
       "localizations" : {
         "en" : {
           "stringUnit" : {
