#392 remove comment and add i18n graph to readme/contributing

--- a/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
+++ b/Scribe/i18n/Scribe-i18n/Localizable.xcstrings
@@ -335,6 +335,7 @@
     },
     "install" : {
       "comment" : "",
+      "extractionState" : "stale",
       "localizations" : {
         "de" : {
           "stringUnit" : {
@@ -426,6 +427,9 @@
           }
         }
       }
+    },
+    "OK" : {
+
     },
     "portuguese" : {
       "comment" : "",
